# gomoku

./: README  README.md  gomoku.cabal  stack.yaml
ai-test/: Main.hs
app/: Main.hs
benchmark/: Main.hs
contest/: Main.hs
doc/: BitBoard.md  NOTES.md
src/: Main.hs
src/Gomoku/: AI.hs  Abstractions.hs  BitBoard.hs  BitBoardImpl.hs  GameState.hs  InputParser.hs  ListImpl.hs  Patterns.hs  ThreatSearch.hs  Threats.hs  UnboxedVectorImpl.hs  Utils.hs  VectorImpl.hs
src/Gomoku/BitBoard/: Helpers.hs  PatternCache.hs  PatternMatching.hs  Wizardry.hs
test/: ExampleBoards.hs  Tests.hs
test/Gomoku/: AISpec.hs  BitBoardImplSpec.hs
