name:                gomoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tpaszun/gomoku#readme
license:             BSD3
license-file:        LICENSE
author:              Tymoteusz Paszun
maintainer:          tpaszun@gmail.com
copyright:           2017 Tymoteusz Paszun
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gomoku
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       containers,
                       time,
                       parsec,
                       parsec-numbers

library
  ghc-options:         -Wall
  exposed-modules:     Gomoku.Abstractions,
                       Gomoku.BitBoard,
                       Gomoku.BitBoardImpl,
                       Gomoku.BitBoard.Helpers,
                       Gomoku.Patterns,
                       Gomoku.BitBoard.PatternMatching,
                       Gomoku.BitBoard.PatternCache,
                       Gomoku.BitBoard.Wizardry
  build-depends:       base >= 4.7 && <5,
                       vector,
                       containers,
                       time,
                       parsec,
                       parsec-numbers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base,
                       gomoku,
                       hspec
  default-language:    Haskell2010
