name:                gomoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tpaszun/gomoku#readme
license:             BSD3
license-file:        LICENSE
author:              Tymoteusz Paszun
maintainer:          tpaszun@gmail.com
copyright:           2017 Tymoteusz Paszun
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gomoku
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5,
                       gomoku,
                       time

executable benchmark
  ghc-options:         -O2 -Wall
  main-is:             Main.hs
  hs-source-dirs:      benchmark
  build-depends:       base,
                       gomoku,
                       criterion
  default-language:    Haskell2010

executable ai-test
  ghc-options:         -O2 -Wall
  main-is:             Main.hs
  hs-source-dirs:      ai-test
  build-depends:       base,
                       containers,
                       pretty-tree,
                       gomoku
  default-language:    Haskell2010

executable contest
  ghc-options:         -O2 -Wall
  main-is:             Main.hs
  hs-source-dirs:      contest
  build-depends:       base,
                       gomoku
  default-language:    Haskell2010

library
  exposed-modules:     Gomoku.Abstractions,
                       Gomoku.AI,
                       Gomoku.BitBoard,
                       Gomoku.BitBoardImpl,
                       Gomoku.BitBoard.Helpers,
                       Gomoku.Patterns,
                       Gomoku.BitBoard.PatternMatching,
                       Gomoku.BitBoard.PatternCache,
                       Gomoku.BitBoard.Wizardry,
                       Gomoku.InputParser
  build-depends:       base >= 4.7 && <5,
                       vector,
                       containers,
                       time,
                       parsec,
                       parsec-numbers,
                       pretty-tree
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base,
                       gomoku,
                       hspec
  default-language:    Haskell2010

